--- a/public/view/view-contact.html
+++ b/public/view/view-contact.html
@@ -11,6 +11,7 @@
 		</address>
 		
 		<a href="#/contacts" class="btn btn-primary">Ok</a>
+		<a ng-href="{{msgUrl}}" class="btn btn-default">Send message</a>
 	</div>
 	
 	<div class="panel-body">
